@@ -1,6 +1,11 @@
 
-Slick 7.x-3.0-dev, 2019-03-07
+Slick 7.x-3.0-dev, 2019-03-12
 -----------------------------
+- Added back deprecated functions to anticipate potential issues.
+- Added isset check to Slick::getOptions().
+
+Slick 7.x-3.0-beta1, 2019-03-07
+-------------------------------
 - Made Slick and Slick UI extensible.
 
 Slick 7.x-3.0-dev, 2019-03-06
